--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/landing_text2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -50,7 +50,7 @@
             app:layout_constraintTop_toBottomOf="@+id/landing_text1" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/landing_text3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="280dp"
@@ -60,17 +60,80 @@
             android:textSize="8sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/landing_text2" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/landing_flower"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="200dp"
+            android:layout_marginTop="412dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4"
+            app:layout_constraintTop_toBottomOf="@+id/landing_text3"
             app:srcCompat="@drawable/flower" />
+
+        <View
+            android:id="@+id/rectangle_4"
+            android:layout_width="295dp"
+            android:layout_height="524dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="72dp"
+            android:background="@drawable/rectangle_4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/landing_flower" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="52dp"
+            android:fontFamily="@font/saotorpes"
+            android:text="The\nProverbial\nPath"
+            android:textAlignment="center"
+            android:textColor="#330033"
+            app:layout_constraintEnd_toEndOf="@+id/rectangle_4"
+            app:layout_constraintStart_toStartOf="@+id/rectangle_4"
+            app:layout_constraintTop_toTopOf="@+id/rectangle_4" />
+
+        <ImageView
+            android:id="@+id/landing_leaves"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="@+id/textView5"
+            app:layout_constraintStart_toStartOf="@+id/textView5"
+            app:layout_constraintTop_toTopOf="@+id/textView5"
+            app:srcCompat="@drawable/leaves" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="270dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/interregular"
+            android:lineSpacingExtra="8sp"
+            android:text="A digital sanctuary where ancient wisdom meets modern solace.\n\nThe path ahead may be unclear, but at The Proverbial Path, you are never alone. Step onto the sun-dappled trail, open your heart to the words of wisdom, and let your journey begin. Whether you seek direction in the labyrinth of love, strength against life's tempests, or simply the quiet murmur of reassurance, tread The Proverbial Path. Let its verses light your way, unraveling the tangled skein of your journey."
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            app:layout_constraintEnd_toEndOf="@+id/rectangle_4"
+            app:layout_constraintStart_toStartOf="@+id/rectangle_4"
+            app:layout_constraintTop_toBottomOf="@+id/landing_leaves" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="149dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="84dp"
+            android:backgroundTint="#A993A4"
+            android:fontFamily="@font/saotorpes"
+            android:text="start"
+            android:textColor="#31233D"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rectangle_4" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
