--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,4 +4,7 @@
         <item name="android:textSize">30sp</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
+
+    <style name="chapter_button_style">
+    </style>
 </resources>
