--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="chapterbutton">#402C1033</color>
+    <color name="proverbs_title_gray">#868686</color>
+    <color name="reading_black">#23211D</color>
 </resources>
