--- a/app/src/main/res/layout/activity_chapters.xml
+++ b/app/src/main/res/layout/activity_chapters.xml
@@ -14,10 +14,10 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:src="@drawable/chapters_vector"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/chapters_bg_png" />
 
     <AutoCompleteTextView
         android:id="@+id/searchbar_chapters"
@@ -30,6 +30,8 @@
         android:fontFamily="@font/interextralight"
         android:hint="Search"
         android:imeOptions="actionSearch"
+        android:inputType="text"
+        android:singleLine="true"
         android:paddingStart="24dp"
         android:textColorHint="#FFFFFF"
         android:textSize="16sp"
@@ -80,6 +82,7 @@
                 android:background="#00FFFFFF"
                 android:contentDescription="@string/button1"
                 android:focusable="auto"
+                android:onClick="button1"
                 android:src="@drawable/_1"
                 android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -93,6 +96,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button2"
+                android:onClick="button2"
                 android:src="@drawable/_2"
                 app:layout_constraintEnd_toEndOf="@+id/button1"
                 app:layout_constraintStart_toStartOf="@+id/button1"
@@ -105,6 +109,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button3"
+                android:onClick="button3"
                 android:src="@drawable/_3"
                 app:layout_constraintEnd_toEndOf="@+id/button2"
                 app:layout_constraintStart_toStartOf="@+id/button2"
@@ -117,6 +122,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button4"
+                android:onClick="button4"
                 app:layout_constraintEnd_toEndOf="@+id/button3"
                 app:layout_constraintStart_toStartOf="@+id/button3"
                 app:layout_constraintTop_toBottomOf="@+id/button3"
@@ -129,6 +135,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button5"
+                android:onClick="button5"
                 app:layout_constraintEnd_toEndOf="@+id/button4"
                 app:layout_constraintStart_toStartOf="@+id/button4"
                 app:layout_constraintTop_toBottomOf="@+id/button4"
@@ -141,6 +148,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button6"
+                android:onClick="button6"
                 app:layout_constraintEnd_toEndOf="@+id/button5"
                 app:layout_constraintStart_toStartOf="@+id/button5"
                 app:layout_constraintTop_toBottomOf="@+id/button5"
@@ -153,6 +161,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button7"
+                android:onClick="button7"
                 app:layout_constraintEnd_toEndOf="@+id/button6"
                 app:layout_constraintStart_toStartOf="@+id/button6"
                 app:layout_constraintTop_toBottomOf="@+id/button6"
@@ -165,6 +174,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button8"
+                android:onClick="button8"
                 app:layout_constraintEnd_toEndOf="@+id/button7"
                 app:layout_constraintStart_toStartOf="@+id/button7"
                 app:layout_constraintTop_toBottomOf="@+id/button7"
@@ -177,6 +187,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button9"
+                android:onClick="button9"
                 app:layout_constraintEnd_toEndOf="@+id/button8"
                 app:layout_constraintStart_toStartOf="@+id/button8"
                 app:layout_constraintTop_toBottomOf="@+id/button8"
@@ -189,6 +200,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button10"
+                android:onClick="button10"
                 app:layout_constraintEnd_toEndOf="@+id/button9"
                 app:layout_constraintStart_toStartOf="@+id/button9"
                 app:layout_constraintTop_toBottomOf="@+id/button9"
@@ -201,6 +213,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button11"
+                android:onClick="button11"
                 app:layout_constraintEnd_toEndOf="@+id/button10"
                 app:layout_constraintStart_toStartOf="@+id/button10"
                 app:layout_constraintTop_toBottomOf="@+id/button10"
@@ -213,6 +226,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button12"
+                android:onClick="button12"
                 app:layout_constraintEnd_toEndOf="@+id/button11"
                 app:layout_constraintStart_toStartOf="@+id/button11"
                 app:layout_constraintTop_toBottomOf="@+id/button11"
@@ -225,6 +239,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button13"
+                android:onClick="button13"
                 app:layout_constraintEnd_toEndOf="@+id/button12"
                 app:layout_constraintStart_toStartOf="@+id/button12"
                 app:layout_constraintTop_toBottomOf="@+id/button12"
@@ -237,6 +252,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button14"
+                android:onClick="button14"
                 app:layout_constraintEnd_toEndOf="@+id/button13"
                 app:layout_constraintStart_toStartOf="@+id/button13"
                 app:layout_constraintTop_toBottomOf="@+id/button13"
@@ -249,6 +265,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button15"
+                android:onClick="button15"
                 app:layout_constraintEnd_toEndOf="@+id/button14"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="@+id/button14"
@@ -262,6 +279,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button16"
+                android:onClick="button16"
                 app:layout_constraintEnd_toEndOf="@+id/button15"
                 app:layout_constraintStart_toStartOf="@+id/button15"
                 app:layout_constraintTop_toBottomOf="@+id/button15"
@@ -274,6 +292,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button17"
+                android:onClick="button17"
                 app:layout_constraintEnd_toEndOf="@+id/button16"
                 app:layout_constraintStart_toStartOf="@+id/button16"
                 app:layout_constraintTop_toBottomOf="@+id/button16"
@@ -286,6 +305,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button18"
+                android:onClick="button18"
                 app:layout_constraintEnd_toEndOf="@+id/button17"
                 app:layout_constraintStart_toStartOf="@+id/button17"
                 app:layout_constraintTop_toBottomOf="@+id/button17"
@@ -298,6 +318,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button19"
+                android:onClick="button19"
                 app:layout_constraintEnd_toEndOf="@+id/button18"
                 app:layout_constraintStart_toStartOf="@+id/button18"
                 app:layout_constraintTop_toBottomOf="@+id/button18"
@@ -310,6 +331,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button20"
+                android:onClick="button20"
                 app:layout_constraintEnd_toEndOf="@+id/button19"
                 app:layout_constraintStart_toStartOf="@+id/button19"
                 app:layout_constraintTop_toBottomOf="@+id/button19"
@@ -322,6 +344,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button21"
+                android:onClick="button21"
                 app:layout_constraintEnd_toEndOf="@+id/button20"
                 app:layout_constraintStart_toStartOf="@+id/button20"
                 app:layout_constraintTop_toBottomOf="@+id/button20"
@@ -334,6 +357,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button22"
+                android:onClick="button22"
                 app:layout_constraintEnd_toEndOf="@+id/button21"
                 app:layout_constraintStart_toStartOf="@+id/button21"
                 app:layout_constraintTop_toBottomOf="@+id/button21"
@@ -346,6 +370,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button23"
+                android:onClick="button23"
                 app:layout_constraintEnd_toEndOf="@+id/button22"
                 app:layout_constraintStart_toStartOf="@+id/button22"
                 app:layout_constraintTop_toBottomOf="@+id/button22"
@@ -358,6 +383,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button24"
+                android:onClick="button24"
                 app:layout_constraintEnd_toEndOf="@+id/button23"
                 app:layout_constraintStart_toStartOf="@+id/button23"
                 app:layout_constraintTop_toBottomOf="@+id/button23"
@@ -370,6 +396,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button25"
+                android:onClick="button25"
                 app:layout_constraintEnd_toEndOf="@+id/button24"
                 app:layout_constraintStart_toStartOf="@+id/button24"
                 app:layout_constraintTop_toBottomOf="@+id/button24"
@@ -382,6 +409,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button26"
+                android:onClick="button26"
                 app:layout_constraintEnd_toEndOf="@+id/button25"
                 app:layout_constraintStart_toStartOf="@+id/button25"
                 app:layout_constraintTop_toBottomOf="@+id/button25"
@@ -394,6 +422,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button27"
+                android:onClick="button27"
                 app:layout_constraintEnd_toEndOf="@+id/button26"
                 app:layout_constraintStart_toStartOf="@+id/button26"
                 app:layout_constraintTop_toBottomOf="@+id/button26"
@@ -406,6 +435,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button28"
+                android:onClick="button28"
                 app:layout_constraintEnd_toEndOf="@+id/button27"
                 app:layout_constraintStart_toStartOf="@+id/button27"
                 app:layout_constraintTop_toBottomOf="@+id/button27"
@@ -418,6 +448,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button29"
+                android:onClick="button29"
                 app:layout_constraintEnd_toEndOf="@+id/button28"
                 app:layout_constraintStart_toStartOf="@+id/button28"
                 app:layout_constraintTop_toBottomOf="@+id/button28"
@@ -430,6 +461,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button30"
+                android:onClick="button30"
                 app:layout_constraintEnd_toEndOf="@+id/button29"
                 app:layout_constraintStart_toStartOf="@+id/button29"
                 app:layout_constraintTop_toBottomOf="@+id/button29"
@@ -442,6 +474,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button31"
+                android:onClick="button31"
                 app:layout_constraintEnd_toEndOf="@+id/button30"
                 app:layout_constraintStart_toStartOf="@+id/button30"
                 app:layout_constraintTop_toBottomOf="@+id/button30"
