--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="chapterbutton">#402C1033</color>
     <color name="proverbs_title_gray">#868686</color>
     <color name="reading_black">#23211D</color>
+    <color name="ic_launcher_bg">#E3988B</color>
 
 </resources>
